Corrigido modal de adicionar

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,20 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #f3f4f6; /* Modificado para o fundo cinza claro */
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffff;
+    --foreground: #171717;
   }
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background-color: var(--background); /* Aplica a cor de fundo ajustada */
   font-family: Arial, Helvetica, sans-serif;
 }
 
