--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400&display=swap');
+
 
 :root {
   --background: #f3f4f6; /* Modificado para o fundo cinza claro */
