--- a/app/tarefas/modal.deletar.module.scss
+++ b/app/tarefas/modal.deletar.module.scss
@@ -1,54 +1,66 @@
 .modalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Garante que o modal esteja no topo */
-  }
-  
-  .modalContent {
-    background: white;
-    padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    text-align: left;
-    z-index: 1001; /* Garante que o conteúdo do modal esteja no topo */
-  }
-  
-  .modalButtons {
-    display: flex;
-    justify-content: space-between;
-    gap: 8px;
-  }
-  
-  .cancelButton, .delete {
-    width: 100%;
-    max-width: 185px;
-    height: 51px;
-    border-radius: 8px;
-    padding: 0;
-    cursor: pointer;
-    text-align: center;
-  }
-  
-  .cancelButton {
-    background-color: #E7EEFB;
-    color: #333;
-    transition: background-color 0.3s ease;
-  }
-  
-  .delete {
-    background-color: #f44336;
-    color: white;
-  }
-  
-  .delete:hover {
-    background-color: #d32f2f;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  text-align: left; /* Centraliza o conteúdo à esquerda */
+  z-index: 1001;
+}
+
+
+.modalContent h2 {
+  font-family: 'Inter Tight', sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000000;
+  text-align: left; /* Centraliza o "Deletar tarefa" à esquerda */
+  margin-bottom: 30px; /* Adiciona espaço abaixo de "Deletar tarefa" */
+}
+
+.modalContent p {
+  text-align: left; /* Alinha a pergunta à esquerda */
+  font-family: 'Inter Tight', sans-serif;
+  margin-top: 0; /* Remove qualquer espaçamento extra */
+  margin-bottom: 20px; /* Mantém o espaçamento antes dos botões */
+}
+.modalButtons {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.cancelButton, .deleteButton {
+  width: 185px;
+  height: 51px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-family: 'Inter Tight', sans-serif;
+  padding: 16px 24px;
+  text-align: center;
+}
+
+.cancelButton {
+  background-color: #E7EEFB;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+.deleteButton {
+  background: linear-gradient(90deg, #D30707 0%, #F05353 100%);
+  color: white;
+  transition: background-color 0.3s ease;
+}
