Colocado a fonte certa

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 
 :root {
-  --background: #f3f4f6; /* Modificado para o fundo cinza claro */
+  --background: #0b54e7; /* Modificado para o fundo cinza claro */
   --foreground: #171717;
 }
 
